--- a/styles.css
+++ b/styles.css
@@ -75,3 +75,11 @@ header {
     background-attachment: fixed;
     position: relative;
 }
+
+img {
+    width: 50px;
+    height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
