--- a/src/html/styles.css
+++ b/src/html/styles.css
@@ -15,9 +15,19 @@
 .logo{
     margin-top: 10px;
 }
+
+@font-face {
+    font-family: 'ka1';
+    src: url('/assets/fonts/ka1.ttf');
+    font-weight: 400;
+    font-weight: normal;
+}
+
 @font-face {
     font-family: 'Pixels';
-    src: '/assets/fonts/PixelifySans-Bold.ttf';
+    src: url('/assets/fonts/PixelifySans-Bold.ttf');
+    font-weight: 400;
+    font-weight: normal;
 }
 
 
