--- a/src/html/styles.css
+++ b/src/html/styles.css
@@ -1,4 +1,8 @@
-﻿body {
+﻿header{
+    align-items:center;
+}
+
+body {
     background: #000000; /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #434343, #000000); /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -38,7 +42,7 @@
     height: 100%;
     padding: 1em;
     text-align: center;
-    margin-left:150px;
+    margin-left:250px;
 }
 .contenedor .ul{
     width: 100%;
@@ -70,10 +74,10 @@
     background: #000000; /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #434343, #000000); /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #434343, #000000);
+
 }
 .contenedor .bloque {
     background-color: white;
-    margin: 1em;
     padding: 1em;
     position: absolute;
     width: 100%;
@@ -83,12 +87,14 @@
     display: none;
     visibility: hidden;
     transition: all .5s ease;
+    text-align:center;
 }
 
 .contenedor .bloque.activo {
     opacity: 1;
     display: block;
     visibility: visible;
+    text-align:center;
 }
 
 nav {
