--- a/src/html/styles.css
+++ b/src/html/styles.css
@@ -38,27 +38,27 @@ body {
 .contenedor {
     background-color: grey;
     max-width: 120em;
-    width: 90%;
+    width: 100%;
     height: 100%;
     padding: 1em;
     text-align: center;
     margin-left:250px;
 }
 .contenedor .ul{
-    width: 100%;
+    width: 53%;
     background-color: black;
     display: flex;
-    flex-flow: row nowrap;
-    justify-content: flex-start;
     align-items: center;
+    margin-left:420px;
 
 }
 .contenedor .li {
     background-color: indigo;
     padding: 1em;
-    margin: 0 0 0 2em;
     color: white;
     transition: all .5s ease;
+    font-size:22px;
+    margin-left:50px;
 }
 
 
@@ -69,7 +69,7 @@ body {
 }
 .contenedor .subcontenedor {
     min-height: 10vh;
-    height: 90%;
+    height: 80%;
     position: relative;
     background: #000000; /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #434343, #000000); /* Chrome 10-25, Safari 5.1-6 */
@@ -80,7 +80,7 @@ body {
     background-color: white;
     padding: 1em;
     position: absolute;
-    width: 100%;
+    width: 99%;
     height: 95%;
     top: 1em;
     opacity: 0;
